<resources>
    <string name="app_name">TriviaChance</string>

    <string name="play_solo">Play Solo</string>
    <string name="play_online">Play Online</string>
    <string name="settings">Settings</string>
    <string name="inventory">Backpack</string>
    <string name="host">Host Game</string>
    <string name="join">Game ID</string>
    <string name="username">Enter Your Username</string>

    <string name="start">Start Game</string>
    <string name="game_id">Your Unique Game ID is:</string>

    <string name="sound">Sound</string>
    <string name="music">Music</string>
    <string name="vibration">Vibration</string>
    <string name="notifications">Notifications</string>

    <string name="redeem">Redeem Prizes Here</string>
    <string name="results">Game Results:</string>

    <string name="current_progress">Current Progress:</string>

    <string name="locked_item">This item is locked</string>

    <string-array name="theme_choices">
        <item>Choose One</item>
        <item>Gold</item>
        <item>Green</item>
        <item>Red</item>
        <item>Purple Flowers</item>
        <item>Bamboo</item>
        <item>Sugar Frosted Desert</item>
        <item>Main</item>
    </string-array>

</resources>