<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainMenu">

    <Button
        android:id="@+id/play_online"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_online" />

    <Button
        android:id="@+id/play_solo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_solo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings" />

        <Button
            android:id="@+id/inventory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inventory" />
    </LinearLayout>
</LinearLayout>