<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/notificationTextView"
        android:layout_width="180dp"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:text="@string/notifications"
        android:textAlignment="viewStart"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/musicTextView"
        app:layout_constraintTop_toBottomOf="@+id/musicTextView" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/playerIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            app:srcCompat="@color/material_dynamic_neutral30"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/editIconButton"
            android:layout_width="55dp"
            android:layout_height="51dp"
            android:backgroundTint="#00FFFFFF"
            android:outlineAmbientShadowColor="#00FFFFFF"
            android:outlineSpotShadowColor="#00FFFFFF"
            android:scaleType="fitCenter"
            android:translationX="90dp"
            android:translationY="95dp"
            app:srcCompat="@android:drawable/ic_menu_edit" />

    </androidx.cardview.widget.CardView>

    <ToggleButton
        android:id="@+id/notificationToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        app:layout_constraintBottom_toBottomOf="@+id/notificationTextView"
        app:layout_constraintEnd_toEndOf="@+id/musicToggle" />

    <TextView
        android:id="@+id/musicTextView"
        android:layout_width="139dp"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:text="@string/music"
        android:textAlignment="viewStart"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/soundTextView"
        app:layout_constraintTop_toBottomOf="@+id/soundTextView" />

    <ToggleButton
        android:id="@+id/musicToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        app:layout_constraintBottom_toBottomOf="@+id/musicTextView"
        app:layout_constraintEnd_toEndOf="@+id/soundToggle" />

    <TextView
        android:id="@+id/vibrationTextView"
        android:layout_width="139dp"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:text="@string/vibration"
        android:textAlignment="viewStart"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/notificationTextView"
        app:layout_constraintTop_toBottomOf="@+id/notificationTextView" />

    <ToggleButton
        android:id="@+id/vibrationToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        app:layout_constraintBottom_toBottomOf="@+id/vibrationTextView"
        app:layout_constraintEnd_toEndOf="@+id/notificationToggle" />

    <ToggleButton
        android:id="@+id/soundToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:text="ToggleButton"
        app:layout_constraintBottom_toBottomOf="@+id/soundTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/soundTextView"
        android:layout_width="139dp"
        android:layout_height="46dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="68dp"
        android:text="@string/sound"
        android:textAlignment="viewStart"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:theme="@style/Theme.TriviaChance"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>